MCR Interface moved to .net6

--- a/ClientMCR/ClientMCR.csproj
+++ b/ClientMCR/ClientMCR.csproj
@@ -7,4 +7,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Images\handrawn-spaceship.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
