4/8/2022 - 6:11 PM - 6:57 PM - When I had issues with git push, i backed up my code manually into another directory before working on git hub issues.  My code was erased but the git hub issue was resolved.  I now have to copy over the working code into my new code to get it working again. I was able to copy my old code over.  I think i might be caught up. will doublecheck later, time for dinner. 50 min
4/9/2022 - 9:19 PM - - Added methods for search buttons on add contact and add company pages.  ReAdded Search page as CompanySearchPage.

--- a/ClientMCR/ClientMCR.csproj
+++ b/ClientMCR/ClientMCR.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="handrawn-spaceship.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="handrawn-spaceship.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Images\handrawn-spaceship.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
