4/27/2022 - 2:00 PM - 2:30 PM - tried one last time to get a lambda to work with it, finally moving on.
4/27/2022 - 2:52 PM - 3:50 PM - Worked on creating a trimmer to remove numbers and spaces and commas from a file called AllCountries.

4/27/2022 - 4:05 PM - 4:37 PM - couldn't get it to work right so i just did it by hand.  I got my list of countries.

4/27/2022 - 5:49 PM - 7:52 PM - got a list of all the countries i think, and coded them in listOfCountries.CS.  Created my first country templete for Afghanistan, can't get it to load right now.

--- a/ClientMCR/ClientMCR.csproj
+++ b/ClientMCR/ClientMCR.csproj
@@ -22,4 +22,17 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="CountriesPage\AfghanistanCompanyAddress.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="CountriesPage\AfghanistanCompanyAddress.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+
 </Project>
