5/3/2022 - 2:21 PM - 2:55 PM - tried condensing code in WPF ColorBitmap, not sure if its stuck in a loop.  I have a DR apt, going to let it run to see what results i get. 35 min
5/3/2022 - 6:10 PM - 6:58 PM - tried to add multiple objects each representing a color and ran out of space in memory.
50 min

5/3/2022 - 7:30 PM - 8:17 PM - I was able to create rectangs on a canvas, it took 500megs of mem but it worked. not correct colors, maybe save it to a bmp?
45 min

r   b   g
255 0   0
255 +
255 255 0
-
0   255 0
        +
0   255 255
    -
0   0   255
+
255 0   255
        -
255 0   0

5/3/2022 - 9:30 PM - 10:30 PM - Trying to code the following rgb in loops in WPFAPP_Canvas and save my work in progress as i go.  As it is the rectangles are too big as they are right now.

5/3/2022 - 10:54 PM - 11:43 PM - The SizeOf the rectengle is in float for color, so i was able to reduce it 10x  Refactored my code for WPFAPP_Canvas.  I have a color line
that goes across one line, i need to make it so that it goes down multiple lines like the color select in ms paint.

5/4/2022 - 3:33 PM - 4:37 PM - I was able to make a color palette but it doesn't account for making a color darker just yet.

5/4/2022 - 5:03 PM - 5:55 PM - factored down the code and introducing color max variables.

5/4/2022 - 7:20 PM - 8:16 PM - I have determined the amount of effort to get close to other color pickers is not worth the effort, going to move on and create black to white color scale and start to work with main color selected in color picker.

5/4/2022 - 8:45 PM - 9:42 PM - Created Black to white, now creatingWPFAPP_ColorTintAdjuster.  need to update image settings so that they show, also working on click event to assign to an object to test.

5/5/2022 - 10:05 AM - 10:25 AM - I need to find out if drawing lines will be faster than rects, i think it will but have to test to be sure.  Working on making lines the same execution as rectangle.

5/5/2022 - 10:36 AM - 11:11 AM - Rects come out faster, line

--- a/ClientMCR/ClientMCR.csproj
+++ b/ClientMCR/ClientMCR.csproj
@@ -10,6 +10,17 @@
 
   <ItemGroup>
     <None Remove="handrawn-spaceship.jpg" />
+    <None Remove="Images\rev1-BlackToWhite.bmp" />
+    <None Remove="Images\rev9-color-pallet-by-nick.bmp" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\rev1-BlackToWhite.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\rev9-color-pallet-by-nick.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
